--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     virtual-host: /
     username: admin
     password: adminzelei
+    listener:
+      simple:
+        prefetch: 1 # 每次只能获取一条消息 处理完成后才能获取下一个消息
 
 server:
-  port: 8081
+  port: 8090
